--- a/doc/pages/_layouts/default.html
+++ b/doc/pages/_layouts/default.html
@@ -4,9 +4,13 @@
 	<title>{{ page.title }} | QDYN Documentation</title>
 	<!-- link to main stylesheet -->
 	<link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
+	{% include mathjax.html %}
 </head>
 <body>
 	<header>
+		<div class="logo">
+			<img src="/img/qdyn_logo_r7.jpeg" />
+		</div>
 		<h1>QDYN Documentation</h1>
 	</header>
 	<div class="container">
