--- a/doc/pages/assets/css/styles.scss
+++ b/doc/pages/assets/css/styles.scss
@@ -1,4 +1,6 @@
 ---
 ---
+@import url("https://fonts.googleapis.com/css?family=Raleway");
+@import url("https://fonts.googleapis.com/css?family=Fredericka+the+Great");
 @import "github";
 @import "main";
