--- a/doc/pages/_sass/main.scss
+++ b/doc/pages/_sass/main.scss
@@ -1,6 +1,7 @@
 html, body{
 	margin: 0;
 	padding: 0;
+	background-color: #fff;
 }
 
 
@@ -15,9 +16,23 @@ header {
 	box-sizing: border-box;
 }
 
+header div.logo {
+	position: absolute;
+	left: 50%;
+	top: 30px;
+	margin-left: -450px;
+}
+
+header div.logo img {
+	width: 165px;
+}
+
 header h1 {
-	margin-left: 117px;
-	font-size: 30px;
+	position: relative;
+	margin-left: 280px;
+	font-size: 3em;
+	font-family: "Fredericka the Great", Helvetica, Arial;
+	font-weight: 400;
 }
 
 
@@ -98,10 +113,11 @@ div.container div.content {
 	width: 700px;
 	float: left;
 	box-sizing: border-box;
+	font-family: Raleway, Heltevica, Arial;
 }
 
 div.container div.content code.highlighter-rouge {
-	font-size: 0.9em;
+	font-size: 0.8em;
 }
 
 div.container div.content ul {
@@ -110,6 +126,37 @@ div.container div.content ul {
 
 div.container div.content ul li {
 	margin: 5px 0;
+}
+
+div.container h1 {
+	font-size: 2.5em;
+	line-height: 2.2em;
+	margin-bottom: 50px;
+	border-bottom-style: double;
+	border-bottom-color: #ccc;
+	text-align: right;
+}
+
+div.container h2:before {
+	content: "# ";
+	color: #ccc;
+}
+
+div.container h2 {
+	font-size: 1.8em;
+	line-height: 2.0em;
+	margin-top: 30px;
+	margin-bottom: 30px;
+	border-bottom: 2px dashed #ddd;
+}
+
+div.container h3 {
+	margin-top: 35px;
+}
+
+div.container div.content blockquote {
+	margin-left: 20px;
+	border-left-color: green;
 }
 
 
