--- a/docs/assets/css/styles.scss
+++ b/docs/assets/css/styles.scss
@@ -2,5 +2,5 @@
 ---
 @import url("https://fonts.googleapis.com/css?family=Raleway");
 @import url("https://fonts.googleapis.com/css?family=Fredericka+the+Great");
-@import "github";
-@import "main";
+@import "github.scss";
+@import "main.scss";
