--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -3,13 +3,13 @@
 <head>
 	<title>{{ page.title }} | QDYN Documentation</title>
 	<!-- link to main stylesheet -->
-	<link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 	{% include mathjax.html %}
 </head>
 <body>
 	<header>
 		<div class="logo">
-			<img src="/img/qdyn_logo_r7.jpeg" />
+			<img src="img/qdyn_logo_r7.jpeg" />
 		</div>
 		<h1>QDYN Documentation</h1>
 	</header>
