Various updates - Fixed syntax highlighting - Added section numbers - Minor textual updates

--- a/docs/assets/css/styles.scss
+++ b/docs/assets/css/styles.scss
@@ -4,3 +4,4 @@
 @import url("https://fonts.googleapis.com/css?family=Fredericka+the+Great");
 @import "github";
 @import "main";
+@import "highlight_default";
